# bluez-iot-agent

./: CMakeLists.txt  README.md  build-command.sh  config.h.in  meson.build
dbus-1/: bluez-iot-agent.conf  bluez-soundsystem-agent.conf
gdbus/: org.bluez.iot-agent.xml  org.bluez.xml
source/: agent-callbacks.c  agent-callbacks.h  agent-server.c  agent-server.h  bluez-client.c  bluez-client.h  bluez-iot-agent.c  bluez-proxy.c  bluez-proxy.h  bluez-soundsystem-agent.c  dbus-bluez.c  dbus-bluez.h  event.h  logger.c  logger.h  state-machine.c  state-machine.h  state.c  state.h  states.c  timeout-manager.c  timeout-manager.h  watch-manager.c  watch-manager.h  web-server.c  web-server.h
source/event/: file.h  timer.h
templates/: index.html.hbs
